[package]
name = "rpdo"
version = "0.2.0"
authors = ["Serhij S. <div@altertech.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/roboplc/rpdo"
description = "RoboPLC Data Objects Protocol"
readme = "README.md"
keywords = ["plc", "fieldbus", "realtime", "network"]

[dependencies]
binrw = "0.14"
rtsc = "0.3"
thiserror = "2.0"
tracing = { version = "0.1" }
parking_lot = { version = "0.12.3", optional = true }
parking_lot_rt = { version = "0.12.1", optional = true }

[dev-dependencies]
env_logger = "0.11.6"
tracing = { version = "0.1", features = ["log"] }

[features]
default = ["locking-default"]
locking-default = ["dep:parking_lot", "rtsc/parking_lot"]
locking-rt = ["dep:parking_lot_rt"]
locking-rt-safe = []
